.xmonad/xmonad.errors

xmonad.hs:62:30: error:
    • Variable not in scope: myNormalBorderColor :: String
    • Perhaps you meant ‘normalBorderColor’ (imported from XMonad)
   |
62 |         normalBorderColor  = myNormalBorderColor,
   |                              ^^^^^^^^^^^^^^^^^^^

xmonad.hs:63:30: error:
    • Variable not in scope: myFocusedBorderColor :: String
    • Perhaps you meant ‘focusedBorderColor’ (imported from XMonad)
   |
63 |         focusedBorderColor = myFocusedBorderColor,
   |                              ^^^^^^^^^^^^^^^^^^^^

xmonad.hs:166:53: error:
    Variable not in scope: minimizeWindow :: Window -> X ()
    |
166 |     , ((modm,               xK_m     ), withFocused minimizeWindow)
    |                                                     ^^^^^^^^^^^^^^

xmonad.hs:169:53: error:
    Data constructor not in scope: RestoreNextMinimizedWin
    |
169 |     , ((modm .|. shiftMask, xK_m     ), sendMessage RestoreNextMinimizedWin)
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^
